k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agion-airgb
  labels:
    name: agion-airgb
    app: airgb
